config/k8s/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passport-office-api-docs-ingress
  namespace: passport-office-api-docs
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  tls:
    - hosts:
        - passport-office-api-docs.doorflow.com
      secretName: passport-office-api-docs-doorflow-com-tls
  rules:
    - host: passport-office-api-docs.doorflow.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: passport-office-api-docs
                port:
                  number: 80
